--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "bundle.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"node mywebpack.js"
+    "dev": "node mywebpack.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-traverse": "^6.26.0",
     "babylon": "^6.18.0"
   }
 }
