--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "babel-traverse": "^6.26.0",
-    "babylon": "^6.18.0"
-  },
   "devDependencies": {
+    "babel-traverse": "^6.26.0",
+    "babylon": "^6.18.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0"
   }
